--- a/flaskblog/templates/dashboard.html
+++ b/flaskblog/templates/dashboard.html
@@ -55,7 +55,7 @@
                         <i class="fa fa-user"></i> <span class="clearfix d-none d-sm-inline-block">Profile</span></a>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                        <a class="dropdown-item" href="#">Log Out</a>
+                        <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
                         <a class="dropdown-item" href="#">My account</a>
                     </div>
                 </li>
