--- a/flaskblog/static/css/main.css
+++ b/flaskblog/static/css/main.css
@@ -29,6 +29,11 @@ body {
 .accordion .card .card-body {
     border-top: 1px solid #eee;
 }
+
+select {
+    display:block!important;
+}
+
 h1,h2,h3,h4,h5,h6{font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
 font-weight:700}header.masthead{
   position:relative;
