--- a/flaskblog/templates/landpage.html
+++ b/flaskblog/templates/landpage.html
@@ -9,12 +9,12 @@
       <a class="navbar-brand" href="#">MESA</a>
       <form name="form_l" class="form-inline" method="POST" action="">
         <div class="form">
-            <!-- Email -->
+            <!-- Username -->
             {{ form_l.hidden_tag() }}
             {% if form_l.username.errors %}
                 {{ form_l.username(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
-                    {% for error in form_l.email.errors %}
+                    {% for error in form_l.username.errors %}
                         <span>{{ error }}</span>
                     {% endfor %}
                 </div>
