--- a/flaskblog/templates/landpage.html
+++ b/flaskblog/templates/landpage.html
@@ -7,7 +7,7 @@
     <div class="container">
       <!-- Navbar brand -->
       <a class="navbar-brand" href="#">MESA</a>
-      <form name="form_l" class="form-inline" method="POST" action="">
+      <form name="form_l" class="form-inline" method="POST" action="{{ url_for('login') }}">
         <div class="form">
             <!-- Username -->
             {{ form_l.hidden_tag() }}
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <!-- Default form register -->
-          <form name="form_r" method="POST" action="" class="text-center p-5">
+          <form name="form_r" method="POST" action="{{ url_for('register') }}" class="text-center p-5">
               {{ form_r.hidden_tag() }}
               <fieldset class="form-group">
                  <p class="h4 mb-4">Join Today</p>
