--- a/flaskblog/templates/dashboard.html
+++ b/flaskblog/templates/dashboard.html
@@ -174,8 +174,60 @@
                             Calendar
                         </div>
                         <div class="card-body">
-                        	Calendar goes here
-                            <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View full calendar</button>
+														<div style="overflow-x:auto;">
+															<table>
+																	<style>
+
+																			table {
+																					border: 1px solid #ddd;
+																			}
+
+																			table {
+    																			border-collapse: collapse;
+    																			width: 100%;
+																			}
+
+																			th {
+																					text-align: center;
+    																			height: 50px;
+																			}
+
+																			th tr {
+																					width: "10%";
+																					padding: 15px;
+																			}
+
+																	</style> 
+																	<tr>
+																			<th>Sun</th> 
+																			<th>Mon</th> 
+																			<th>Tue</th> 
+																			<th>Wed</th> 
+																			<th>Thu</th> 
+																			<th>Fri</th> 
+																			<th>Sat</th> 
+																	</tr>
+																	<tr bgcolor="";> 
+																			<td><table><tr><th>11-20<th> </tr> <tr> <td>Event A</td> </tr></table></td> 
+																			<td><table><tr><th>11-21<th> </tr> <tr> <td>No Events</td> </tr></table></td> 
+																			<td><table><tr><th>11-22<th> </tr> <tr> <td>Event C</td> </tr></table></td> 
+																			<td><table><tr><th>11-23<th> </tr> <tr> <td>Event D</td> </tr></table></td> 
+																			<td><table><tr><th>11-24<th> </tr> <tr> <td>No Events</td> </tr></table></td> 
+																			<td><table><tr><th>11-25<th> </tr> <tr> <td>Event F</td> </tr></table></td> 
+																			<td><table><tr><th>11-26<th> </tr> <tr> <td>Event G</td> </tr></table></td> 
+																	</tr> 
+																	<tr>
+																			<td><table><tr><th>Nov 27<th> </tr> <tr> <td>No Events</td> </tr></table></td> 
+																			<td><table><tr><th>Nov 21<th> </tr> <tr> <td>Event B</td> </tr></table></td> 
+																			<td><table><tr><th>Nov 22<th> </tr> <tr> <td>No Events</td> </tr></table></td> 
+																			<td><table><tr><th>Nov 23<th> </tr> <tr> <td>Event D</td> </tr></table></td> 
+																			<td><table><tr><th>Nov 24<th> </tr> <tr> <td>Event E</td> </tr></table></td> 
+																			<td><table><tr><th>Nov 25<th> </tr> <tr> <td>Event F</td> </tr></table></td> 
+																			<td><table><tr><th>Nov 26<th> </tr> <tr> <td>Event Gasdf</td> </tr></table></td> 
+																	</tr>
+														</table>
+                            		<button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View full calendar</button>
+                        		</div>
                         </div>
                     </div>
                     <!--/.Panel-->
