--- a/flaskblog/templates/landpage.html
+++ b/flaskblog/templates/landpage.html
@@ -35,14 +35,16 @@
             <!-- Sign in button -->
             {{ form_l.submit(class="btn btn-outline-info") }}
         </div>
+      <!--Nguyen-->
         <div class="form">
             <small class="text-muted ml-2">
-                <a href="#">Forgot Password?</a>
+                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
             </small>
             <small class="text-muted ml-2">
                 <a href="#">Forgot Username?</a>
             </small>
         </div>
+      <!--Nguyen-->
       </form>  
     </div>
   </nav>
