Reverting changes to a stable state 120918_0012

--- a/MESAeveryday/templates/landpage.html
+++ b/MESAeveryday/templates/landpage.html
@@ -35,16 +35,14 @@
             <!-- Sign in button -->
             {{ form_l.submit(class="btn btn-outline-info") }}
         </div>
-      <!--Nguyen-->
         <div class="form">
             <small class="text-muted ml-2">
-                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
+                <a href="#">Forgot Password?</a>
             </small>
             <small class="text-muted ml-2">
                 <a href="#">Forgot Username?</a>
             </small>
         </div>
-      <!--Nguyen-->
       </form>  
     </div>
   </nav>
@@ -227,3 +225,4 @@
   </footer>  
   <!-- /Start your project here-->
 {% endblock content %}
+
