--- a/MESAeveryday/templates/landpage.html
+++ b/MESAeveryday/templates/landpage.html
@@ -37,13 +37,13 @@
         </div>
         <div class="form">
             <small class="text-muted ml-2">
-                <a href="#">Forgot Password?</a>
+                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
             </small>
             <small class="text-muted ml-2">
                 <a href="#">Forgot Username?</a>
             </small>
         </div>
-      </form>  
+      </form>
     </div>
   </nav>
 
@@ -84,7 +84,7 @@
                           {% endif %}
                       </div>
                     </div>
-                    <div class="col">  
+                    <div class="col">
                       <div class="form-group">
                               {% if form_r.lastname.errors %}
                                   {{ form_r.lastname(class="form-control form-control-lg is-invalid") }}
@@ -97,8 +97,8 @@
                                   {{ form_r.lastname(class="form-control", placeholder="Last Name") }}
                               {% endif %}
                       </div>
-                    </div>  
-                  </div>  
+                    </div>
+                  </div>
                 <div class="form-group">
                         {% if form_r.username.errors %}
                             {{ form_r.username(class="form-control form-control-lg is-invalid") }}
@@ -138,7 +138,7 @@
                         {% endif %}
                     </div>
                   </div>
-                  <div class="col">  
+                  <div class="col">
                     <div class="form-group">
                         {% if form_r.confirm_password.errors %}
                             {{ form_r.confirm_password(class="form-control form-control-lg is-invalid") }}
@@ -151,7 +151,7 @@
                             {{ form_r.confirm_password(class="form-control", placeholder="Confirm Password") }}
                         {% endif %}
                     </div>
-                  </div>  
+                  </div>
                 </div>
                 <div class="form-group">
                         {% if form_r.school.errors %}
@@ -174,7 +174,7 @@
               <p>By clicking
                   <em>Sign up</em> you agree to our
                   <a href="" target="_blank">terms of service</a>
-              </p>    
+              </p>
           </form>
           <!-- Default form register -->
         </div>
@@ -222,7 +222,7 @@
         </div>
       </div>
     </div>
-  </footer>  
+  </footer>
   <!-- /Start your project here-->
 {% endblock content %}
 
