--- a/flaskblog/templates/dashboard.html
+++ b/flaskblog/templates/dashboard.html
@@ -173,11 +173,12 @@
                         <div class="card-header white-text primary-color">
                             Calendar
                         </div>
-                        <div class="card-body">
-														<div style="overflow-x:auto;">
-																		<iframe src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=pdx.edu_nl0ch7aidsj6hdmsc02toe684s%40group.calendar.google.com&amp;color=%23AB8B00&amp;ctz=America%2FLos_Angeles" style="border-width:1" width="500" height="300" frameborder="0" scrolling="no"></iframe>	
-                            		<button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View full calendar</button>
-                        		</div>
+                        <div class="center">
+														<div class="calendar-plugin">
+																<iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepicker&file=https://calendar.google.com/calendar/ical/pdx.edu_nl0ch7aidsj6hdmsc02toe684s%40group.calendar.google.com/public/basic.ics&border_radius=5&ichrome=1' allowTransparency='true' scrolling='no' frameborder=0 height=200 width=200></iframe>
+
+																<button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View full calendar</button>
+														</div>
                         </div>
                     </div>
                     <!--/.Panel-->
