deleted some added divs

--- a/flaskblog/templates/dashboard.html
+++ b/flaskblog/templates/dashboard.html
@@ -173,12 +173,10 @@
                         <div class="card-header white-text primary-color">
                             Calendar
                         </div>
-                        <div class="center">
-														<div class="calendar-plugin">
-																<iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepicker&file=https://calendar.google.com/calendar/ical/pdx.edu_nl0ch7aidsj6hdmsc02toe684s%40group.calendar.google.com/public/basic.ics&border_radius=5&ichrome=1' allowTransparency='true' scrolling='no' frameborder=0 height=200 width=200></iframe>
+                        <div class="card-body">
+														<iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepicker&file=https://calendar.google.com/calendar/ical/pdx.edu_nl0ch7aidsj6hdmsc02toe684s%40group.calendar.google.com/public/basic.ics&border_radius=5&ichrome=1' allowTransparency='true' scrolling='no' frameborder=0 height=200 width=200></iframe>
 
-																<button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View full calendar</button>
-														</div>
+														<button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View full calendar</button>
                         </div>
                     </div>
                     <!--/.Panel-->
