--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -48,7 +48,7 @@
                     <a class="nav-link waves-effect"><i class="fa fa-envelope"></i> <span class="clearfix d-none d-sm-inline-block">Inbox</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect"><i class="fa fa-calendar"></i> <span class="clearfix d-none d-sm-inline-block">Calendar</span></a>
+                    <a class="nav-link waves-effect" href="https://calendar.google.com/calendar/embed?src=pdx.edu_nl0ch7aidsj6hdmsc02toe684s%40group.calendar.google.com&ctz=America%2FLos_Angeles"><i class="fa fa-calendar"></i> <span class="clearfix d-none d-sm-inline-block">Calendar</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect" href="#" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -164,7 +164,7 @@
                             Calendar
                         </div>
                         <div class="card-body">
-														<iframe id='cv_if1' src='http://cdn.instantcal.com/cvir.html?id=cv_nav1&theme=RE&ntype=cv_datepicker&file=https://calendar.google.com/calendar/ical/pdx.edu_nl0ch7aidsj6hdmsc02toe684s%40group.calendar.google.com/public/basic.ics&border_radius=5&ichrome=1' allowTransparency='true' scrolling='no' frameborder=0 height=360 width=360></iframe>
+														<iframe id='cv_if5' src='http://cdn.instantcal.com/cvir.html?id=cv_nav5&file=https://calendar.google.com/calendar/ical/pdx.edu_nl0ch7aidsj6hdmsc02toe684s%40group.calendar.google.com/public/basic.ics&theme=BL&ccolor=%23ffffc0&dims=1&gtype=cv_monthgrid&gcloseable=0&gnavigable=1&gperiod=month&itype=cv_simpleevent' allowTransparency=true scrolling='no' frameborder=0 height=300 width=300></iframe>
                         </div>
 
                     </div>
