update landing page for forgot username section

--- a/MESAeveryday/templates/landpage.html
+++ b/MESAeveryday/templates/landpage.html
@@ -40,7 +40,7 @@
                 <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
             </small>
             <small class="text-muted ml-2">
-                <a href="#">Forgot Username?</a>
+                <a href="{{url_for('reset_user') }}">Forgot Username?</a>
             </small>
         </div>
       </form>
