changed location, and time logic, added in color support for events.

--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -181,13 +181,13 @@
                             		<tr>
                             				<table> 
 																				<tr>
-																						<td>{{event['summary']}} in {{event['remain_days']}} days</td>
+																						<td>{{event['summary']}} in {{event['remain_days']}} days ({{event['calColor']}} : {{event['mesaColor']}})</td>
 																				</tr>
 																				<tr>
 																						<td>on {{event['start_string']}}</td> 
 																				</tr>
 																				<tr>
-																						<td>{{event['location']}}</td> 
+																						<td>at {{event['location']}}</td> 
 																				</tr>
 																				<tr><td>--</td></tr>
 																		</table>
