--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -23,25 +23,36 @@
                 <li class="nav-item dropdown notifications-nav">
                     <a class="nav-link dropdown-toggle waves-effect" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
-                        <span class="badge red">3</span> <i class="fa fa-bell"></i>
+
+												{% if number_upcoming > 0 %}
+														<span class="badge red">{{number_upcoming}}</span> <i class="fa fa-bell"></i>
+												{% endif %}
+
                         <span class="d-none d-md-inline-block">Notifications</span>
                     </a>
+
                     <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">
-                            <i class="fa fa-money mr-2" aria-hidden="true"></i>
-                            <span>Notification 1</span>
-                            <span class="float-right"><i class="fa fa-clock-o" aria-hidden="true"></i> 13 min</span>
-                        </a>
-                        <a class="dropdown-item" href="#">
-                            <i class="fa fa-money mr-2" aria-hidden="true"></i>
-                            <span>Notification 2</span>
-                            <span class="float-right"><i class="fa fa-clock-o" aria-hidden="true"></i> 33 min</span>
-                        </a>
-                        <a class="dropdown-item" href="#">
-                            <i class="fa fa-line-chart mr-2" aria-hidden="true"></i>
-                            <span>Notification 3</span>
-                            <span class="float-right"><i class="fa fa-clock-o" aria-hidden="true"></i> 53 min</span>
-                        </a>
+
+												{% if number_upcoming > 0 %}
+														{% for event in upcoming_events %}
+																<a class="dropdown-item" href="#">
+																		<i class="fa fa-times-rectangle mr-2" aria-hidden="true"></i>
+																		<span> {{ event['summary'] }} </span>
+																		<span class="float-right"><i class="fa fa-clock-o" aria-hidden="true"></i>
+																				{{ event['remain_days'] }} days
+																		</span>
+																</a>
+														{% endfor %}
+												{% else %}
+														<a class="dropdown-item" href="#">
+																<i class="fa fa-times-rectangle mr-2" aria-hidden="true"></i>
+																<span> No Events </span>
+																<span class="float-right"><i class="fa fa-clock-o" aria-hidden="true"></i>
+																0 days
+																</span>
+														</a>
+												{% endif %}
+		
                     </div>
                 </li>
                 <li class="nav-item">
