--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -56,7 +56,7 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                         <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
-                        <a class="dropdown-item" href="#">My account</a>
+                        <a class="dropdown-item" href="{{ url_for('account') }}">My account</a>
                     </div>
                 </li>
 
