--- a/MESAeveryday/static/css/main.css
+++ b/MESAeveryday/static/css/main.css
@@ -30,6 +30,21 @@ body {
     border-top: 1px solid #eee;
 }
 
+.cal-div {
+		position: relative;
+		overflow: hidden;
+		padding-top: 56.25%;
+}
+
+.cal-iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100;
+		border: 0;
+}
+
 select {
     display:block!important;
 }
