--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -41,6 +41,10 @@
             wheelPropagation: true,
             minScrollbarLength: 20
         });
+
+        window.addEventListener('resize', ()=>{
+            document.getElementById('cv_if5').src = document.getElementById('cv_if5').src
+        })
     </script>
 </body>
 </html>
