--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -15,6 +15,8 @@
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="../static/css/mdbdashboard2.min.css" rel="stylesheet">
+    <!-- Image Picker -->
+    <link href="../static/css/image-picker.css" rel="stylesheet">
     <!-- Main css -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">  
 </head>
@@ -28,6 +30,8 @@
     <script type="text/javascript" src="../static/js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+    <!-- Image picker -->
+    <script type="text/javascript" src="../static/js/image-picker.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="../static/js/mdbdashboard2.min.js"></script>
     <!--Custom scripts-->
@@ -41,6 +45,10 @@
             wheelPropagation: true,
             minScrollbarLength: 20
         });
+    </script>
+    <script>
+      // Image picker initializer
+      $("select").imagepicker();
     </script>
 </body>
 </html>
