Removed image_file from accoutn render template

--- a/MESAeveryday/templates/account.html
+++ b/MESAeveryday/templates/account.html
@@ -41,7 +41,7 @@
         <div class="form-group">           
             <!-- This button makes the popup modal "avatarModal" appear-->
             <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#avatarModal">
-              Select New Profile Picture
+              Change Profile Picture
             </button>
             <img class="rounded-circle account-img" src="static/avatar/{{ current_user.picture }}"width="75" height="75">  
         </div>
